--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "typedoc": "^0.19.2"
   }
 }
