--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx ts-node src/index.ts",
-    "setup": "npx ts-node scripts/setup.ts"
+    "setup": "npx ts-node scripts/setup.ts",
+    "note": "npx ts-node scripts/note.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/inquirer": "^7.3.1",
     "chalk": "^4.1.0",
+    "date-fns": "^2.16.1",
     "inquirer": "^7.3.3",
+    "slugify": "^1.4.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
