--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/figlet": "^1.2.0",
     "@types/inquirer": "^7.3.1",
     "chalk": "^4.1.0",
     "date-fns": "^2.16.1",
+    "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
     "slugify": "^1.4.5",
     "ts-node": "^9.0.0",
