--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@types/figlet": "^1.2.0",
     "@types/inquirer": "^7.3.1",
+    "@types/showdown": "^1.9.3",
     "chalk": "^4.1.0",
     "date-fns": "^2.16.1",
     "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
+    "showdown": "^1.9.1",
     "slugify": "^1.4.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
