--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha --require ts-node/register 'test/test.ts'",
+    "coverage": "npx nyc mocha --require ts-node/register 'test/test.ts'",
     "dev": "npx ts-node src/index.ts",
     "setup": "npx ts-node scripts/setup.ts",
     "note": "npx ts-node scripts/note.ts",
@@ -26,7 +27,15 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "@types/sinon": "^9.0.7",
+    "chai": "^4.2.0",
+    "mocha": "^8.1.3",
+    "mock-fs": "^4.13.0",
+    "nyc": "^15.1.0",
     "prettier": "2.1.2",
+    "sinon": "^9.1.0",
     "typedoc": "^0.19.2"
   }
 }
