--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^4.1.0",
     "date-fns": "^2.16.1",
     "figlet": "^1.5.0",
+    "handlebars": "^4.7.6",
     "inquirer": "^7.3.3",
     "showdown": "^1.9.1",
     "slugify": "^1.4.5",
