--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "write-lite",
-  "version": "0.0.10",
+  "name": "notes",
+  "version": "0.0.11",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "inquirer": "^7.3.3",
     "showdown": "^1.9.1",
     "slugify": "^1.4.5",
+    "string-strip-html": "^6.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
