--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "figlet": "^1.5.0",
     "handlebars": "^4.7.6",
     "inquirer": "^7.3.3",
+    "moment": "^2.29.1",
     "showdown": "^1.9.1",
     "slugify": "^1.4.5",
     "string-strip-html": "^6.0.4",
