--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npx ts-node scripts/build.ts"
   },
   "author": "Prakash Raman",
-  "license": "ISC",
+  "license": "GNU GPLv3",
   "dependencies": {
     "@types/figlet": "^1.2.0",
     "@types/inquirer": "^7.3.1",
