--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "test": "npx mocha --require ts-node/register 'test/test.ts'",
     "coverage": "npx nyc mocha --require ts-node/register 'test/test.ts'",
+    "build": "npx tsc",
+    "postbuild": "npx cpy '**/*' '!**/*.ts' '../build/' --cwd=src --parents",
     "dev": "npx ts-node src/index.ts",
-    "setup": "npx ts-node scripts/setup.ts",
-    "note": "npx ts-node scripts/note.ts",
-    "build": "npx ts-node scripts/build.ts"
+    "dev:setup": "npx ts-node src/scripts/setup.ts",
+    "dev:note": "npx ts-node src/scripts/note.ts",
+    "dev:build": "npx ts-node src/scripts/build.ts"
   },
   "author": "Prakash Raman <prakash.raman.ka@gmail.com> (http://prakashraman.info)",
   "license": "GNU GPLv3",
@@ -18,6 +20,7 @@
     "@types/inquirer": "^7.3.1",
     "@types/showdown": "^1.9.3",
     "chalk": "^4.1.0",
+    "commander": "^6.1.0",
     "date-fns": "^2.16.1",
     "figlet": "^1.5.0",
     "handlebars": "^4.7.6",
@@ -34,6 +37,8 @@
     "@types/mocha": "^8.0.3",
     "@types/sinon": "^9.0.7",
     "chai": "^4.2.0",
+    "cpy": "^8.1.1",
+    "cpy-cli": "^3.1.1",
     "mocha": "^8.1.3",
     "mock-fs": "^4.13.0",
     "nyc": "^15.1.0",
