--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "baseUrl": "./",
     "paths": {
       "mock-fs": ["@types/mock-fs"]
-    }
-  }
+    },
+    "outDir": "./build"
+  },
+  "include": ["./src/**/*"]
 }
