--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mock-fs": "^4.13.0",
     "nyc": "^15.1.0",
     "prettier": "2.1.2",
+    "release-it": "^14.2.0",
     "sinon": "^9.1.0",
     "typedoc": "^0.19.2"
   }
