--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "test": "npx mocha --require ts-node/register 'test/test.ts'",
+    "test": "npx mocha --require ts-node/register 'test/**/*.ts'",
     "coverage": "npx nyc --report-dir=coverage --reporter=lcov --reporter=text npm run test",
     "codecov": "npm run coverage && bash ./scripts/codecov.sh",
     "build": "npx tsc",
